# easht

./: README.md  kepler-config.yaml  kepler-values.yaml  kepler_helm.sh  kepler_service_monitor.yaml  optuna_test.py  prometheus-values.yaml  prometheus_helm.sh  pyproject.toml
benchmark_template/: experiment_runner.py
evaluation_plots/: boxplot.py  energy_power_data_optuna_workers.json  energy_total_data_optuna.json  get_energy_mono.py  get_energy_workers.py  workers_json_line.py
hyperopt/: .dockerignore  Dockerfile  mongodb.yaml  readme.md  requirements.txt  train.py  train.yaml
ise-kube/: cadvisor.yaml  kepler_helm.sh  prometheus_helm.sh
leaderboard/: index.html  script.js
metrics/: energy_power_data_optuna_workers.json  get_energy.py  get_energy_workers.py
mlflow/: Dockerfile  k8s-manifest.yaml  pytorch_lightning_distributed.py
mlflow2/: Dockerfile  README.md  k8s-manifest.yaml  pytorch_lightning_distributed.py
optuna_mnist/: .env  README.md  k8s-manifest.yaml  k8s-manifestd.yaml  kepler_metrics.py  optuna_mnist_experiment.py  optuna_mnist_resource_metrics.csv  optuna_mnist_resource_metrics.json  postgres-manifest.yaml  pytorch_lightning_distributed.py  study-creator.yaml  worker.yaml  worker.yaml.template
prometheus_snapshot_deployment/: grafana-deployment.yaml  prometheus-snapshot-deployment.yaml  prometheus-snapshot-pv.yaml  readme.md
ray/: README.md  raycluster.yaml  rayoperator.yaml  script.py
ray_cluster/: .env  README.md  ray_mnist_experiment.py  raycluster.yaml  requirements.txt  script.py
ray_cluster_text/: .env  ray_mnist_experiment.py  (+1 more)
(+101 files in other folders)
